@@ -794,6 +794,88 @@ operator|.
 name|class
 argument_list|)
 decl_stmt|;
+comment|// solr.xml node constants
+DECL|field|CORE_NAME
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|CORE_NAME
+init|=
+literal|"name"
+decl_stmt|;
+DECL|field|CORE_CONFIG
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|CORE_CONFIG
+init|=
+literal|"config"
+decl_stmt|;
+DECL|field|CORE_INSTDIR
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|CORE_INSTDIR
+init|=
+literal|"instanceDir"
+decl_stmt|;
+DECL|field|CORE_DATADIR
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|CORE_DATADIR
+init|=
+literal|"dataDir"
+decl_stmt|;
+DECL|field|CORE_SCHEMA
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|CORE_SCHEMA
+init|=
+literal|"schema"
+decl_stmt|;
+DECL|field|CORE_SHARD
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|CORE_SHARD
+init|=
+literal|"shard"
+decl_stmt|;
+DECL|field|CORE_COLLECTION
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|CORE_COLLECTION
+init|=
+literal|"collection"
+decl_stmt|;
+DECL|field|CORE_ROLES
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|CORE_ROLES
+init|=
+literal|"roles"
+decl_stmt|;
+DECL|field|CORE_PROPERTIES
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|CORE_PROPERTIES
+init|=
+literal|"properties"
+decl_stmt|;
 DECL|field|cores
 specifier|protected
 specifier|final
@@ -2776,7 +2858,7 @@ name|getAttr
 argument_list|(
 name|node
 argument_list|,
-literal|"name"
+name|CORE_NAME
 argument_list|,
 literal|null
 argument_list|)
@@ -2823,7 +2905,7 @@ name|getAttr
 argument_list|(
 name|node
 argument_list|,
-literal|"instanceDir"
+name|CORE_INSTDIR
 argument_list|,
 literal|null
 argument_list|)
@@ -2839,7 +2921,7 @@ name|getAttr
 argument_list|(
 name|node
 argument_list|,
-literal|"config"
+name|CORE_CONFIG
 argument_list|,
 literal|null
 argument_list|)
@@ -2867,7 +2949,7 @@ name|getAttr
 argument_list|(
 name|node
 argument_list|,
-literal|"schema"
+name|CORE_SCHEMA
 argument_list|,
 literal|null
 argument_list|)
@@ -2902,7 +2984,7 @@ name|getAttr
 argument_list|(
 name|node
 argument_list|,
-literal|"shard"
+name|CORE_SHARD
 argument_list|,
 literal|null
 argument_list|)
@@ -2940,7 +3022,7 @@ name|getAttr
 argument_list|(
 name|node
 argument_list|,
-literal|"collection"
+name|CORE_COLLECTION
 argument_list|,
 literal|null
 argument_list|)
@@ -2971,7 +3053,7 @@ name|getAttr
 argument_list|(
 name|node
 argument_list|,
-literal|"roles"
+name|CORE_ROLES
 argument_list|,
 literal|null
 argument_list|)
@@ -3003,7 +3085,7 @@ name|getAttr
 argument_list|(
 name|node
 argument_list|,
-literal|"properties"
+name|CORE_PROPERTIES
 argument_list|,
 literal|null
 argument_list|)
@@ -3031,9 +3113,7 @@ name|getAttr
 argument_list|(
 name|node
 argument_list|,
-name|CoreAdminParams
-operator|.
-name|DATA_DIR
+name|CORE_DATADIR
 argument_list|,
 literal|null
 argument_list|)
@@ -6256,7 +6336,7 @@ name|getAttr
 argument_list|(
 name|node
 argument_list|,
-literal|"name"
+name|CORE_NAME
 argument_list|,
 literal|null
 argument_list|)
@@ -6338,7 +6418,7 @@ name|getAttr
 argument_list|(
 name|node
 argument_list|,
-literal|"name"
+name|CORE_NAME
 argument_list|,
 literal|null
 argument_list|)
@@ -6391,7 +6471,7 @@ name|coreAttribs
 operator|.
 name|put
 argument_list|(
-literal|"name"
+name|CORE_NAME
 argument_list|,
 name|coreName
 argument_list|)
@@ -6410,7 +6490,7 @@ name|coreAttribs
 argument_list|,
 name|coreNode
 argument_list|,
-literal|"instanceDir"
+name|CORE_INSTDIR
 argument_list|,
 name|instanceDir
 argument_list|,
@@ -6432,7 +6512,7 @@ name|coreAttribs
 argument_list|,
 name|coreNode
 argument_list|,
-literal|"conf"
+name|CORE_CONFIG
 argument_list|,
 name|configName
 argument_list|,
@@ -6457,7 +6537,7 @@ name|coreAttribs
 argument_list|,
 name|coreNode
 argument_list|,
-literal|"schema"
+name|CORE_SCHEMA
 argument_list|,
 name|schema
 argument_list|,
@@ -6480,7 +6560,7 @@ name|coreAttribs
 argument_list|,
 name|coreNode
 argument_list|,
-literal|"dataDir"
+name|CORE_DATADIR
 argument_list|,
 name|dataDir
 argument_list|,
@@ -6521,7 +6601,7 @@ name|coreAttribs
 argument_list|,
 name|coreNode
 argument_list|,
-literal|"shard"
+name|CORE_SHARD
 argument_list|,
 name|shard
 argument_list|,
@@ -6557,7 +6637,7 @@ name|coreAttribs
 argument_list|,
 name|coreNode
 argument_list|,
-literal|"collection"
+name|CORE_COLLECTION
 argument_list|,
 name|collection
 argument_list|,
@@ -6586,7 +6666,7 @@ name|coreAttribs
 operator|.
 name|put
 argument_list|(
-literal|"properties"
+name|CORE_PROPERTIES
 argument_list|,
 name|opt
 argument_list|)
